--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
 
 </head>
 
-<body style="background-image: url('https://cdn.dribbble.com/users/47353/screenshots/1148485/burger.png');">
+<body style="background-image: url('https://st4.depositphotos.com/13841446/19750/v/1600/depositphotos_197506534-stock-illustration-silhouette-cocktail-coconut-water-random.jpg');">
     {{{ body }}}
 </body>
 
